--- a/passman-cli.cabal
+++ b/passman-cli.cabal
@@ -18,7 +18,7 @@ category:            Password
 build-type:          Simple
 extra-source-files:  README.md
                    , ChangeLog.md
-cabal-version:       >= 2.0
+cabal-version:       2.0
 tested-with:         GHC >= 8.0.1 && <= 8.2.2
 
 flag dummyClipboard
