--- a/passman-cli.cabal
+++ b/passman-cli.cabal
@@ -41,15 +41,15 @@ executable passman-cli
                        Paths_passman_cli
   autogen-modules:     Paths_passman_cli
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base                  >= 4.9 && < 4.13
-                     , conduit              ^>= 1.2.11
-                     , contravariant        ^>= 1.4
+  build-depends:       base                  >= 4.9      && < 4.13
+                     , conduit               >= 1.2.11   && < 1.4
+                     , contravariant         >= 1.4      && < 1.6
                      , haskeline            ^>= 0.7.2.3
                      , optparse-applicative ^>= 0.14.0.0
                      , passman-core         ^>= 0.2.0.0
-                     , resourcet            ^>= 1.1.10
+                     , resourcet             >= 1.1.10   && < 1.3
                      , text                 ^>= 1.2.2.2
-                     , yaml                 ^>= 0.8.23.3
+                     , yaml                  >= 0.8.23.3 && < 0.11
   default-language:    Haskell2010
   other-extensions:    CPP
                        GeneralizedNewtypeDeriving
@@ -60,7 +60,7 @@ executable passman-cli
     cpp-options:       -DDUMMYCLIPBOARD
     other-modules:     Passman.CLI.Clipboard.Dummy
   else
-    build-depends:     X11 >= 1.8 && < 1.9
+    build-depends:     X11 >= 1.8 && < 1.10
     other-modules:     Passman.CLI.Clipboard.X11
 
 source-repository head
